tests/valid_inputs/ptr_to_bool.cpp

int main() {
	int i, *ni = nullptr;
	if(ni)
		return 0;
	else if(&i)
		return 42;
	return -1;
}
