tests/invalid_inputs/sema/call_too_many_args.cpp

int foo(int i);

int main() {
	return foo(42, 314);
}
